Brought Javadoc in line with checkstyle requirements.