@@ -1,50 +1,56 @@
 package no.ntnu.idatx2003.exam2025.boardgames.view;
 
-import javafx.scene.layout.HBox;
-import javafx.scene.layout.VBox;
-
 import java.sql.SQLException;
-import java.util.ArrayList;
 import java.util.LinkedHashMap;
 import java.util.List;
-
 import javafx.scene.Parent;
 import javafx.scene.control.Button;
 import javafx.scene.control.CheckBox;
 import javafx.scene.control.ComboBox;
 import javafx.scene.control.Label;
 import javafx.scene.control.ScrollPane;
+import javafx.scene.layout.HBox;
+import javafx.scene.layout.VBox;
 import no.ntnu.idatx2003.exam2025.boardgames.controller.PlayerListViewController;
 import no.ntnu.idatx2003.exam2025.boardgames.model.Player;
 import no.ntnu.idatx2003.exam2025.boardgames.util.view.AlertUtil;
 
+/**
+ * Player list view handles displaying available Player Objects from the database.
+ */
 public class PlayerListView {
-  private final VBox playerListVBox;
+  private final VBox playerListLayout;
   private final ScrollPane scrollPane;
   private final PlayerListViewController controller;
-  private ComboBox<String> gameComboBox;
-  private Button refreshButton;
+  private final ComboBox<String> gameComboBox;
+  private final Button refreshButton;
 
   // Have some boxes next to player names that can be
   // checked to "add to game" / pool of active players
   // Should be retrieved from database and added as Player Objects
   // if unchecked = delete that Player object instance
+
+  /**
+   * Default constructor for the list view.
+   *
+   * @param controller a PlayerlistViewController built to work with player lists.
+   */
   public PlayerListView(PlayerListViewController controller) {
     this.controller = controller;
     refreshButton = new Button("Refresh List");
-    playerListVBox = new VBox(5);
-    scrollPane = new ScrollPane(playerListVBox);
+    playerListLayout = new VBox(5);
+    scrollPane = new ScrollPane(playerListLayout);
     scrollPane.setFitToWidth(true);
     scrollPane.setPrefViewportHeight(400);
 
     gameComboBox = new ComboBox<>();
     gameComboBox.getItems().addAll(controller.getSupportedGames());
     if (!gameComboBox.getItems().isEmpty()) {
-      gameComboBox.setValue(gameComboBox.getItems().get(0));
+      gameComboBox.setValue(gameComboBox.getItems().getFirst());
     }
     configureButton();
 
-    VBox container = new VBox(10, gameComboBox, playerListVBox, refreshButton);
+    VBox container = new VBox(10, gameComboBox, playerListLayout, refreshButton);
     scrollPane.setContent(container);
 
     loadPlayers();
@@ -55,9 +61,8 @@ public class PlayerListView {
   }
 
   private void loadPlayers() {
-    playerListVBox.getChildren().clear();
+    playerListLayout.getChildren().clear();
 
-    HBox header = new HBox(20);
     Label nameHeader = new Label("Name");
     nameHeader.setMinWidth(120);
     Label ageHeader = new Label("Age");
@@ -69,14 +74,14 @@ public class PlayerListView {
     Label selectHeader = new Label("Select");
     selectHeader.setMinWidth(60);
 
+    HBox header = new HBox(20);
     header.getChildren().addAll(nameHeader, ageHeader, idHeader, actionHeader, selectHeader);
-    playerListVBox.getChildren().add(header);
+    playerListLayout.getChildren().add(header);
 
     try {
       List<Player> players = controller.getAllPlayers();
 
       for (Player player : players) {
-        HBox row = new HBox(20);
 
         Label nameLabel = new Label(player.getPlayerName());
         nameLabel.setMinWidth(120);
@@ -104,7 +109,7 @@ public class PlayerListView {
         selectBox.setOnAction(e -> {
           if (selectBox.isSelected()) {
             controller.addPlayerToGameSession(player);
-          }else if (!selectBox.isSelected()) {
+          } else if (!selectBox.isSelected()) {
             controller.removePlayerFromGameSession(player);
           }
         });
@@ -117,18 +122,19 @@ public class PlayerListView {
             LinkedHashMap<String, Integer> stats = controller.getPlayerStatsMap(
                 player, selectedGame);
             PlayerStatisticsView statsView = new PlayerStatisticsView(player, stats, selectedGame);
-            statsView.showOverlay(playerListVBox.getScene().getWindow());
+            statsView.showOverlay(playerListLayout.getScene().getWindow());
           } catch (SQLException ex) {
             AlertUtil.showError("Failed to load statistics", ex.getMessage());
           }
         });
 
-        // The order here matches the header!
-        row.getChildren().addAll(nameLabel, ageLabel, idLabel, deleteButton, selectBox, showStatsButton);
-        playerListVBox.getChildren().add(row);
+        HBox row = new HBox(20);
+        row.getChildren().addAll(
+            nameLabel, ageLabel, idLabel, deleteButton, selectBox, showStatsButton);
+        playerListLayout.getChildren().add(row);
       }
       if (players.isEmpty()) {
-        playerListVBox.getChildren().add(new Label("No players found in the database."));
+        playerListLayout.getChildren().add(new Label("No players found in the database."));
       }
     } catch (SQLException e) {
       AlertUtil.showError("Failed to load players: ", e.getMessage());
